--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -233,7 +233,7 @@
         "\n",
         "- **framework_pdb**: Path to the antibody framework we're using (e.g. hu-4D5-8_Fv.pdb)\n",
         "- **target_pdb**: Path to the target protein structure (e.g. rsv_site3.pdb)\n",
-        "- **hotspot_res**: List of hotspot residues defining our epitope (target binding site)\n",
+        "- **hotspot_res**: List of hotspot residue (chain + position) defining target binding site / epitope. Must always start with T to follow HLT format (explained at end of notebook)\n",
         "- **design_loops**: Possible range of lengths of the CDR loops.\n",
         "  - L1, L2, L3: Light chain CDR loops\n",
         "  - H1, H2, H3: Heavy chain CDR loops\n",
@@ -266,10 +266,10 @@
         "# RFDiffusion input\n",
         "framework_pdb = \"hu-4D5-8_Fv.pdb\"\n",
         "target_pdb = \"rsv_site3.pdb\"\n",
-        "hotspot_res = \"[T305,T456]\"\n",
+        "hotspot_res = \"[T305,T456]\" # E.g. chain T, position 305. Chain must always be T to follow HLT format (see end of notebook)\n",
         "\n",
         "# RFDiffusion parameters\n",
-        "design_loops = \"[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]\"\n",
+        "design_loops = \"[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]\" # Possible lengths of LCDR1, LCDR2, LCDR3, HCDR1, HCDR2, HCDR3\n",
         "num_designs = 1\n",
         "\n",
         "# Check that everything present\n",
@@ -627,7 +627,12 @@
         "\n",
         "The RFantibody protocol recommends filtering on the following metrics, shown to lead to an up to 10X improvement in experimental success rates.\n",
         "- RF2 predicted alignment error (pAE) < 10 (pae column)\n",
-        "- RMSD between design and RF2 prediction < 2.00 Å for the CDRs (framework_aligned_cdr_rmsd column)"
+        "- RMSD between design and RF2 prediction < 2.00 Å for the CDRs (framework_aligned_cdr_rmsd column)\n",
+        "\n",
+        "\n",
+        "Lower pAE values correlates strongly with improved accuracy of the designed antibody docks, and experimental success rate (see [pre-print Extended Data Figure 2B](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2) )\n",
+        "\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/pae.png?raw=1\" style=\"width:20%;\">\n"
       ]
     },
     {
@@ -728,7 +733,7 @@
         "\n",
         "<img src=\"https://github.com/mhoie/workshop/blob/main/img/change_params.png?raw=1\" style=\"width:30%;\">\n",
         "\n",
-        "5. Change the epitope_residues variable to e.g. '[T41, T111]' based on predicted epitopes\n",
+        "5. Change the epitope_residues variable to e.g. '[T41, T111]' based on predicted epitopes (Note: T is the chain (must always be T), and number corresponds to the residue position in the PDB)\n",
         "\n",
         "6. Run through the workflow as normal.\n",
         "\n",
@@ -778,11 +783,7 @@
         "- iii) Epitope residues\n",
         "- iv) No. 3D backbone designs (RFDiffusion)\n",
         "- v) CDR loop lengths (RFDiffusion)\n",
-        "- vi) No. designed sequences (ProteinMPNN)\n",
-        "\n",
-        "Lower pAE values correlates strongly with experimental success rate and improved accuracy of the design antibody docks (see [pre-print](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2) )\n",
-        "\n",
-        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/pae.png?raw=1\" style=\"width:60%;\">\n"
+        "- vi) No. designed sequences (ProteinMPNN)"
       ]
     },
     {
