--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -132,10 +132,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "NyBRznjZhCJL",
-        "outputId": "43b5332f-7fca-4403-cd6b-f47ea1135efb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "43b5332f-7fca-4403-cd6b-f47ea1135efb"
       },
       "outputs": [
         {
@@ -218,10 +218,10 @@
       "execution_count": 3,
       "metadata": {
         "id": "geQVU_mXhCJL",
-        "outputId": "821b7df2-5871-41da-9a88-f7b91866bdda",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "821b7df2-5871-41da-9a88-f7b91866bdda"
       },
       "outputs": [
         {
@@ -362,7 +362,13 @@
           "text": [
             "Running RFDiffusion Antibody...\r\n",
             "Starting generation of 1 design(s)...\r\n",
-            "Loading model...\r\n"
+            "Loading model...\n",
+            "Design 0: timestep 5/50\n",
+            "Design 0: timestep 10/50\n",
+            "Design 0: timestep 15/50\n",
+            "Design 0: timestep 20/50\n",
+            "Design 0: timestep 25/50\n",
+            "Design 0: timestep 30/50\n"
           ]
         }
       ],
@@ -562,7 +568,7 @@
         "Lower pAE values correlates strongly with improved accuracy of the designed antibody docks, and experimental success rate (see [pre-print Extended Data Figure 2B](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2) )\n",
         "\n",
         "<div>\n",
-        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/pae.png?raw=1\" width=\"500\"/>\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/pae.png?raw=1\" width=\"400\"/>\n",
         "</div>"
       ]
     },
@@ -600,7 +606,9 @@
         "id": "dinnqcgAhlcH"
       },
       "source": [
-        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/rfantibody.png?raw=1\" style=\"width:60%;\">\n",
+        "<div>\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/rfantibody.png?raw=1\" width=\"700\"/>\n",
+        "</div>\n",
         "\n",
         "For practical tips on antibody design, we refer to Baker Lab's RFAntibody README's [practical considerations for Antibody Design ](https://github.com/RosettaCommons/RFantibody/blob/main/README.md#practical-considerations-for-antibody-design)."
       ]
