--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -368,7 +368,10 @@
             "Design 0: timestep 15/50\n",
             "Design 0: timestep 20/50\n",
             "Design 0: timestep 25/50\n",
-            "Design 0: timestep 30/50\n"
+            "Design 0: timestep 30/50\n",
+            "Design 0: timestep 35/50\n",
+            "Design 0: timestep 40/50\n",
+            "Design 0: timestep 45/50\n"
           ]
         }
       ],
@@ -672,17 +675,24 @@
         "\n",
         "1. Choose a target from RCSB, e.g. the X-ray structure of 1M47 Human interleukin-2: https://www.rcsb.org/structure/1M47\n",
         "\n",
-        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/rcsb_IL.png?raw=1\" style=\"width:40%;\">\n",
+        "<div>\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/rcsb_IL.png?raw=1\" width=\"500\"/>\n",
+        "</div>\n",
+        "\n",
         "\n",
         "2. Predict likely epitope residues with a tool like DiscoTope-3.0: https://biolib.com/DTU/DiscoTope-3\n",
         "\n",
-        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/discotope3.png?raw=1\" style=\"width:40%;\">\n",
+        "<div>\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/discotope3.png?raw=1\" width=\"500\"/>\n",
+        "</div>\n",
         "\n",
         "3. Process the PDB file with the TargetPDBtoHLT app: https://biolib.com/BioITWorkshop/TargetPDBtoHLT/\n",
         "\n",
         "4. Upload the processed PDB to Google Colab, and change the target_pdb variable to e.g. '1m47_T.pdb' (in Step 1)\n",
         "\n",
-        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/change_params.png?raw=1\" style=\"width:30%;\">\n",
+        "<div>\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/change_params.png?raw=1\" width=\"500\"/>\n",
+        "</div>\n",
         "\n",
         "5. Change the epitope_residues variable to e.g. '[T41, T111]' based on predicted epitopes (Note: T is the chain (must always be T), and number corresponds to the residue position in the PDB)\n",
         "\n",
