--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -329,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -371,8 +371,33 @@
             "Design 0: timestep 30/50\n",
             "Design 0: timestep 35/50\n",
             "Design 0: timestep 40/50\n",
-            "Design 0: timestep 45/50\n"
+            "Design 0: timestep 45/50\n",
+            "Completed generating 1 design(s)...\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:biolib:Cloud: Computation finished\n",
+            "INFO:biolib:Cloud: Result Ready\n",
+            "INFO:biolib:Waiting for job 098fbbd9-61ca-46cd-ac57-66ad9ef2f145 to finish...\n",
+            "INFO:biolib:Job 098fbbd9-61ca-46cd-ac57-66ad9ef2f145 has finished.\n",
+            "INFO:biolib:Saving 4 files to output/rfdiffusion...\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[File \"/ab_design_0.trb\" with size of 98753 bytes,\n",
+              " File \"/ab_design_0.pdb\" with size of 130995 bytes,\n",
+              " File \"/traj/ab_design_0_Xt-1_traj.pdb\" with size of 4919021 bytes,\n",
+              " File \"/traj/ab_design_0_pX0_traj.pdb\" with size of 11527700 bytes]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
         }
       ],
       "source": [
@@ -457,11 +482,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "AfmUon9ThCJM"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AfmUon9ThCJM",
+        "outputId": "65309cbd-845f-4e78-caf1-c6252b111a90"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:biolib:Loaded project BioITWorkshop/ProteinMPNN:1.0.5\n",
+            "INFO:biolib:View the result in your browser at: https://biolib.com/results/b57147ea-ae8b-49dc-a549-bd700b27802f/\n",
+            "INFO:biolib:Cloud: Initializing\n",
+            "INFO:biolib:Cloud: Pulling images...\n",
+            "INFO:biolib:Cloud: Computing...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processing all PDB files in rfdiffusion\r\n",
+            "Running with args:  ['poetry', 'run', 'python', '/opt/rfantibody/scripts/proteinmpnn_interface_design.py', '-pdbdir', 'rfdiffusion', '-outpdbdir', 'output/', '-checkpoint_path', '/opt/rfantibody/weights/ProteinMPNN_v48_noise_0.2.pt', '-seqs_per_struct', '3']\n",
+            "Found GPU will run ProteinMPNN on GPU\n",
+            "Attempting pose: rfdiffusion/ab_design_0.pdb\n",
+            "loopH: [25, 26, 27, 28, 29, 30, 31, 51, 52, 53, 54, 55, 56, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109]\n",
+            "loopL: [144, 145, 146, 147, 148, 149, 150, 151, 167, 168, 169, 170, 171, 172, 173, 206, 207, 208, 209, 210, 211, 212, 213, 214]\n",
+            "MPNN generated 3 sequences in 5 seconds\n",
+            "sequence_optimize: [('EVQLVESGGGLVQPGGSLRLSCAASGVDISEGYIHWVRQAPGKGLEWVARIHPATGGTRYADSVKGRFTISADTSKNTAYLQMNSLRAEDTAVYYCSYSTYSNGSHYLVGWGQGTLVTVSSDIQMTQSPSSLSASVGDRVTITGKTDSTDVGWYQQKPGKAPKLLIINGSIRLGGVPSRFSGSRSGTDFTLTISSLQPEDFATYYVYEGGSDPLGFGQGTKVEIK', 1.6145138), ('EVQLVESGGGLVQPGGSLRLSCAASGMNISEGYIHWVRQAPGKGLEWVARIHPSSGGTRYADSVKGRFTISADTSKNTAYLQMNSLRAEDTAVYYCSSESYSNGNRYLVGWGQGTLVTVSSDIQMTQSPSSLSASVGDRVTITGSGDSTGVGWYQQKPGKAPKLLIMNGSIRLGGVPSRFSGSRSGTDFTLTISSLQPEDFATYYVYEGSSEPLGFGQGTKVEIK', 1.5160127), ('EVQLVESGGGLVQPGGSLRLSCAASGVNIAEGYIHWVRQAPGKGLEWVARIHPKTGGTRYADSVKGRFTISADTSKNTAYLQMNSLRAEDTAVYYCSLSSYSNGSRYLVGWGQGTLVTVSSDIQMTQSPSSLSASVGDRVTITAKTDSTSVGWYQQKPGKAPKLLIMNGSIRLGGVPSRFSGSRSGTDFTLTISSLQPEDFATYYQYEGGSEPLGFGQGTKVEIK', 1.5802611)]\n",
+            "Struct: rfdiffusion/ab_design_0.pdb reported success in 5 seconds\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:biolib:Cloud: Computation finished\n",
+            "INFO:biolib:Cloud: Result Ready\n",
+            "INFO:biolib:Waiting for job b57147ea-ae8b-49dc-a549-bd700b27802f to finish...\n",
+            "INFO:biolib:Job b57147ea-ae8b-49dc-a549-bd700b27802f has finished.\n",
+            "INFO:biolib:Saving 3 files to output/proteinmpnn...\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[File \"/ab_design_0_dldesign_0.pdb\" with size of 129042 bytes,\n",
+              " File \"/ab_design_0_dldesign_1.pdb\" with size of 129042 bytes,\n",
+              " File \"/ab_design_0_dldesign_2.pdb\" with size of 129042 bytes]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
       "source": [
         "# Input directory\n",
         "input_dir = \"output/rfdiffusion\"  # Using the output from RFdiffusion\n",
@@ -522,9 +601,33 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "PjZ8w1kChCJM"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PjZ8w1kChCJM",
+        "outputId": "a3f1c6bb-116b-4604-aa31-9a25a5343f3f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:biolib:Loaded project BioITWorkshop/RF2Antibody:1.0.3\n",
+            "INFO:biolib:View the result in your browser at: https://biolib.com/results/60740f72-09e7-4ce9-990f-a86e4701356b/\n",
+            "INFO:biolib:Cloud: Initializing\n",
+            "INFO:biolib:Cloud: Pulling images...\n",
+            "INFO:biolib:Cloud: Computing...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processing all PDB files in proteinmpnn\r\n",
+            "Running with args:  ['poetry', 'run', 'python', '/opt/rfantibody/scripts/rf2_predict.py', 'input.pdb_dir=proteinmpnn', 'output.pdb_dir=output/', 'inference.num_recycles=3']\r\n"
+          ]
+        }
+      ],
       "source": [
         "# Input directory\n",
         "input_dir = \"output/proteinmpnn\"  # Using the output from ProteinMPNN\n",
@@ -722,6 +825,7 @@
         "Swap out the heavy + light chain ScFv antibody framework (hu-4D5-8_Fv) for a nanobody framework instead:\n",
         "\n",
         "```bash\n",
+        "# Set this variable on top of the notebook\n",
         "framework_pdb = \"h-NbBCII10.pdb\"\n",
         "```\n",
         "\n",
@@ -745,14 +849,16 @@
       "source": [
         "## C) Optimize the workflow\n",
         "\n",
-        "Optimize the following parameters to increase diversity of the generated designs, aiming to get the lowest possible pAE + CDR RMSD design.\n",
+        "Optimize the following parameters to increase diversity of the generated designs, aiming to get the lowest possible **pAE and CDR RMSD** design.\n",
         "\n",
         "- i) Antibody framework\n",
         "- ii) Target PDB\n",
         "- iii) Epitope residues\n",
         "- iv) No. 3D backbone designs (RFDiffusion)\n",
         "- v) CDR loop lengths (RFDiffusion)\n",
-        "- vi) No. designed sequences (ProteinMPNN)"
+        "- vi) No. designed sequences (ProteinMPNN)\n",
+        "\n",
+        "Please reach out if you have any questions about the workflow, and good luck!"
       ]
     },
     {
