--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -599,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -624,8 +624,59 @@
           "name": "stdout",
           "text": [
             "Processing all PDB files in proteinmpnn\r\n",
-            "Running with args:  ['poetry', 'run', 'python', '/opt/rfantibody/scripts/rf2_predict.py', 'input.pdb_dir=proteinmpnn', 'output.pdb_dir=output/', 'inference.num_recycles=3']\r\n"
+            "Running with args:  ['poetry', 'run', 'python', '/opt/rfantibody/scripts/rf2_predict.py', 'input.pdb_dir=proteinmpnn', 'output.pdb_dir=output/', 'inference.num_recycles=3']\n",
+            "DGL backend not selected or invalid.  Assuming PyTorch for now.\n",
+            "Setting the default backend to \"pytorch\". You can change it in the ~/.dgl/config.json file or export the DGLBACKEND environment variable.  Valid options are: pytorch, mxnet, tensorflow (all lowercase)\n",
+            "Running RF2 with the following configs: {'input': {'pdb': None, 'pdb_dir': 'proteinmpnn', 'quiver': None}, 'output': {'pdb_dir': 'output/', 'quiver': None, 'output_intermediates': False}, 'inference': {'num_recycles': 3, 'hotspot_show_proportion': 0.1, 'cautious': True}, 'model': {'model_weights': '/opt/rfantibody/weights/RF2_ab.pt'}, 'model_param': {'n_extra_block': 4, 'n_main_block': 36, 'd_msa': 256, 'd_pair': 128, 'd_templ': 64, 'n_head_msa': 8, 'n_head_pair': 4, 'n_head_templ': 4, 'd_hidden': 32, 'd_hidden_templ': 32, 'd_t1d': 23, 'p_drop': 0.0, 'SE3_param_full': {'num_layers': 1, 'num_channels': 48, 'num_degrees': 2, 'l0_in_features': 32, 'l0_out_features': 32, 'l1_in_features': 2, 'l1_out_features': 2, 'num_edge_features': 32, 'div': 4, 'n_heads': 4}, 'SE3_param_topk': {'num_layers': 1, 'num_channels': 128, 'num_degrees': 2, 'l0_in_features': 64, 'l0_out_features': 64, 'l1_in_features': 2, 'l1_out_features': 2, 'num_edge_features': 64, 'div': 4, 'n_heads': 4}}}\n",
+            "TM-score of target alignment: 0.991\n",
+            "TM-score of framework alignment: 0.977\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.980\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.981\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.982\n",
+            "TM-score of target alignment: 0.991\n",
+            "TM-score of framework alignment: 0.980\n",
+            "TM-score of target alignment: 0.990\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.980\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.980\n",
+            "TM-score of target alignment: 0.988\n",
+            "TM-score of framework alignment: 0.980\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.980\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:biolib:Cloud: Computation finished\n",
+            "INFO:biolib:Cloud: Result Ready\n",
+            "INFO:biolib:Waiting for job 60740f72-09e7-4ce9-990f-a86e4701356b to finish...\n",
+            "INFO:biolib:Job 60740f72-09e7-4ce9-990f-a86e4701356b has finished.\n",
+            "INFO:biolib:Saving 4 files to output/rosettafold2...\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[File \"/ab_design_0_dldesign_1.pdb\" with size of 479573 bytes,\n",
+              " File \"/ab_design_0_dldesign_0.pdb\" with size of 480645 bytes,\n",
+              " File \"/ab_design_0_dldesign_2.pdb\" with size of 481918 bytes,\n",
+              " File \"/scores.csv\" with size of 497 bytes]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
         }
       ],
       "source": [
