Only download traj files

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -131,16 +131,16 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "NyBRznjZhCJL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "NyBRznjZhCJL",
         "outputId": "43b5332f-7fca-4403-cd6b-f47ea1135efb"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/155.7 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m155.7/155.7 kB\u001b[0m \u001b[31m4.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/147.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m147.8/147.8 kB\u001b[0m \u001b[31m9.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
@@ -166,26 +166,26 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Opening authorization page at: https://biolib.com/sign-in/request/notebook/?token=22tx92xXHbeKx6BJ\n",
             "If your browser does not open automatically, click on the link above.\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
+            "application/javascript": "",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": []
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Successfully signed in!\n"
           ]
@@ -217,16 +217,16 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "geQVU_mXhCJL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "geQVU_mXhCJL",
         "outputId": "821b7df2-5871-41da-9a88-f7b91866bdda"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2025-04-01 18:04:45 URL:https://raw.githubusercontent.com/mhoie/workshop/refs/heads/main/hu-4D5-8_Fv.pdb [131172/131172] -> \"hu-4D5-8_Fv.pdb\" [1]\n",
             "2025-04-01 18:04:45 URL:https://raw.githubusercontent.com/mhoie/workshop/refs/heads/main/rsv_site3.pdb [461944/461944] -> \"rsv_site3.pdb\" [1]\n"
@@ -301,8 +301,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Framework PDB exists: True\n",
             "Target PDB exists: True\n",
@@ -339,8 +339,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Loaded project BioITWorkshop/RFDiffusionAntibody:1.0.7\n",
             "INFO:biolib:View the result in your browser at: https://biolib.com/results/098fbbd9-61ca-46cd-ac57-66ad9ef2f145/\n",
@@ -357,8 +357,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Running RFDiffusion Antibody...\r\n",
             "Starting generation of 1 design(s)...\r\n",
@@ -376,8 +376,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Cloud: Computation finished\n",
             "INFO:biolib:Cloud: Result Ready\n",
@@ -387,7 +387,6 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[File \"/ab_design_0.trb\" with size of 98753 bytes,\n",
@@ -396,13 +395,14 @@
               " File \"/traj/ab_design_0_pX0_traj.pdb\" with size of 11527700 bytes]"
             ]
           },
+          "execution_count": 5,
           "metadata": {},
-          "execution_count": 5
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "# Run RFdiffusion through BioLib\n",
-        "app_rfdiff = biolib.load('BioITWorkshop/RFDiffusionAntibody')  # Replace with actual RFantibody app ID\n",
+        "app_rfdiff = biolib.load('BioITWorkshop/RFDiffusionAntibody') \n",
         "job_rfdiff = app_rfdiff.run(\n",
         "    target_pdb=target_pdb,\n",
         "    framework_pdb=framework_pdb,\n",
@@ -410,7 +410,7 @@
         "    design_loops=design_loops,\n",
         "    num_designs=num_designs,\n",
         ")\n",
-        "job_rfdiff.save_files(\"output/rfdiffusion\")\n",
+        "job_rfdiff.save_files(\"output/rfdiffusion\", path_filter=lambda path: path.endswith('.pdb') and 'traj' not in path)\n",
         "job_rfdiff.list_output_files()"
       ]
     },
@@ -492,8 +492,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Loaded project BioITWorkshop/ProteinMPNN:1.0.5\n",
             "INFO:biolib:View the result in your browser at: https://biolib.com/results/b57147ea-ae8b-49dc-a549-bd700b27802f/\n",
@@ -503,8 +503,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Processing all PDB files in rfdiffusion\r\n",
             "Running with args:  ['poetry', 'run', 'python', '/opt/rfantibody/scripts/proteinmpnn_interface_design.py', '-pdbdir', 'rfdiffusion', '-outpdbdir', 'output/', '-checkpoint_path', '/opt/rfantibody/weights/ProteinMPNN_v48_noise_0.2.pt', '-seqs_per_struct', '3']\n",
@@ -518,8 +518,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Cloud: Computation finished\n",
             "INFO:biolib:Cloud: Result Ready\n",
@@ -529,7 +529,6 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[File \"/ab_design_0_dldesign_0.pdb\" with size of 129042 bytes,\n",
@@ -537,8 +536,9 @@
               " File \"/ab_design_0_dldesign_2.pdb\" with size of 129042 bytes]"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -609,8 +609,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Loaded project BioITWorkshop/RF2Antibody:1.0.3\n",
             "INFO:biolib:View the result in your browser at: https://biolib.com/results/60740f72-09e7-4ce9-990f-a86e4701356b/\n",
@@ -620,8 +620,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Processing all PDB files in proteinmpnn\r\n",
             "Running with args:  ['poetry', 'run', 'python', '/opt/rfantibody/scripts/rf2_predict.py', 'input.pdb_dir=proteinmpnn', 'output.pdb_dir=output/', 'inference.num_recycles=3']\n",
@@ -655,8 +655,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Cloud: Computation finished\n",
             "INFO:biolib:Cloud: Result Ready\n",
@@ -666,7 +666,6 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[File \"/ab_design_0_dldesign_1.pdb\" with size of 479573 bytes,\n",
@@ -675,8 +674,9 @@
               " File \"/scores.csv\" with size of 497 bytes]"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -684,7 +684,7 @@
         "input_dir = \"output/proteinmpnn\"  # Using the output from ProteinMPNN\n",
         "\n",
         "# Run RosettaFold2\n",
-        "app_rf2 = biolib.load('BioITWorkshop/RF2Antibody')  # Replace with actual app ID\n",
+        "app_rf2 = biolib.load('BioITWorkshop/RF2Antibody') \n",
         "job_rf2 = app_rf2.run(\n",
         "    pdb=input_dir,\n",
         "    num_recycles=3,\n",
